# Risk-And-Retention-Intelligence-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml
agent/: m365agents.local.yml  m365agents.yml
agent/appPackage/: declarativeAgent.json  manifest.json  risk-retention-plugin.json
fabric/ontologies/: risk-retention-ontology.json
fabric/semantic-models/: risk-retention-measures.json
mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml
mcp-server/src/risk_agent_mcp/: __init__.py  config.py  main.py
mcp-server/src/risk_agent_mcp/auth/: __init__.py  entra.py
mcp-server/src/risk_agent_mcp/fabric/: __init__.py  iq_client.py
mcp-server/src/risk_agent_mcp/tools/: __init__.py  registry.py
mcp-server/src/risk_agent_mcp/widgets/: __init__.py  dashboard.py
mcp-server/tests/: test_tools.py
scripts/: dev.ps1  dev.sh  discover-mcp-tools.ps1  package-agent.ps1  quick-provision.ps1  setup.ps1  setup.sh  submission-pack.ps1
