[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-agent-mcp"
version = "0.1.0"
description = "MCP server for Risk & Retention Intelligence Agent — Fabric IQ + Adaptive Card widgets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "msal>=1.28.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.6.0"]

[project.scripts]
risk-agent-mcp = "risk_agent_mcp.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_agent_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
